# settings

./: Cargo.toml
config/: ApiSettings.toml  VaidioCounting.toml  VaidioServers.toml
src/: logger.rs  main.rs
src/settings/: api.rs  mod.rs  vaidio_counting.rs  vaidio_server.rs
src/test/: api.rs  counting.rs  mod.rs  server.rs
