[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]

# log

log4rs = "1.3.0"
log = "0.4.21"

# general

directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
config = { version = "0.14.0", features = ["json", "toml"] }
lazy_static = "1.5.0"
